--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,31 @@
 # FILE: pyproject.toml
 [tool.bandit]
 exclude_dirs = ["tests"]
+
+[tool.poetry]
+package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+requests = "^2.32.4"
+pytest = "^8.4.0"
+boto3 = "^1.38.34"
+pyaml = "^25.5.0"
+aws-lambda-powertools = "^3.14.0"
+pydantic = "^2.11.5"
+aws-xray-sdk = "^2.14.0"
+undecorated = "^0.3.0"
+deepdiff = "^8.5.0"
+mediatimestamp = "^5.2.0"
+cymple = "^0.12.0"
+moto = "^5.1.5"
+
+[project]
+name = "time-addressable-media-store"
+readme = "README.md"
+requires-python = ">=3.13,<4.0.0"
+dependencies = [
+]
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
