--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ deepdiff = "^8.5.0"
 mediatimestamp = "^5.2.0"
 cymple = "^0.12.0"
 moto = "^5.1.5"
+datamodel-code-generator = "^0.31.0"
 
 [project]
 name = "time-addressable-media-store"
